# ai-financial-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
deploy/: Caddyfile  setup.sh
src/: display.py  graph.py  state.py
src/agents/: __init__.py  fundamentals.py  portfolio_manager.py  risk_manager.py  sector_prompts.py  sentiment.py  technicals.py
src/llm/: models.py
src/tools/: market_data.py  twitter_data.py
src/web/: routes.py  serializers.py
static/: app.js  style.css
templates/: base.html  index.html  results.html
